<resources>
    <string name="app_name">AvaApp</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="opensky_logo">OpenSky_Logo</string>
    <string name="welcome">Welcome!</string>
    <string name="what_do_you_wish_to_check">What do you wish to check?</string>
    <string name="check_flights_nearby">Check flights nearby</string>
    <string name="get_flights_from_the_airport">Get flights from the airport</string>
    <string name="displaying_list">Displaying list of planes in radius : 100 km.</string>
    <string name="current_loc">Current location: %1$f; %2$f</string>
    <string name="no_loc">Cannot get your location.</string>
    <string name="no_loc_again">Cannot get your location. Click search again.</string>
    <string name="grant_perm">Grant permissions and click search again!</string>
    <string name="enable_loc">Enable location and click search again!</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="aiport">Aiport</string>
    <string name="date">Date</string>
    <string name="search">Search</string>
    <string name="show_map">Show current on map.</string>
    <string name="last_searches">Last searches:</string>
    <string name="showing_flights_for">Showing flights for:</string>
    <string name="enter_your_password">Enter your password:</string>
    <string name="enter_your_username">Enter your username:</string>
    <string name="repeat_password">Repeat password:</string>
    <string name="title_activity_flights_by_airport">FlightsByAirport</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="login_data_not_correct">Login data not correct!</string>
    <string name="data_not_correct">Data not correct!</string>
    <string name="title_activity_maps">Map</string>
    <string name="all_data_is_provided_by_aviationstack_we_are_not_responsible_for_any_misinformation_that_canbe_provided_please_choose_your_flight_direction">
        All data is provided by Aviationstack, we are not responsible for any misinformation that can be provided. Please
        choose your flight direction.
    </string>
</resources>
