<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@drawable/main_background"
              android:layout_height="match_parent">
    <AutoCompleteTextView
            android:layout_width="164dp"
            android:hint="@string/country"
            android:layout_height="46dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/atxt_country" android:fontFamily="@font/alegreya" android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.493" android:layout_marginTop="52dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <AutoCompleteTextView
            android:layout_width="166dp"
            android:hint="@string/state"
            android:layout_height="46dp"
            android:id="@+id/atxt_state" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.497" android:fontFamily="@font/alegreya"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/atxt_country"/>
    <AutoCompleteTextView
            android:layout_width="167dp"
            android:hint="@string/aiport"
            android:layout_height="44dp"
            android:id="@+id/atxt_aiport" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textAlignment="center"
            android:fontFamily="@font/alegreya" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/atxt_state"/>
    <ScrollView
            android:layout_width="401dp"
            android:layout_height="314dp" android:layout_marginEnd="1dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="1dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="1dp" android:id="@+id/scview_lastairports">
    </ScrollView>
    <EditText
            android:layout_width="168dp"
            android:layout_height="39dp"
            android:inputType="date"
            android:ems="10"
            android:hint="@string/date"
            android:id="@+id/txt_datepicker" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/atxt_aiport"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:textAlignment="center"
            android:fontFamily="@font/alegreya"/>
    <Button
            android:text="@string/search"
            android:layout_width="142dp"
            android:layout_height="50dp"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btn_search" app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_datepicker" android:textAlignment="center"
            android:fontFamily="@font/alegreya" android:background="@drawable/button_background"
            android:textSize="24sp"/>
    <TextView
            android:text="@string/last_searches"
            android:layout_width="171dp"
            android:layout_height="38dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="4dp"
            android:id="@+id/textView4" android:fontFamily="@font/alegreya" android:textSize="24sp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/scview_lastairports"/>
</androidx.constraintlayout.widget.ConstraintLayout>