<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@drawable/main_background"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal">

    <TextView
            android:text="@string/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textSize="36sp"
            android:fontFamily="@font/alegreya" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="144dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/what_do_you_wish_to_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView3" android:textSize="24sp" android:fontFamily="@font/alegreya"
            app:layout_constraintHorizontal_bias="0.496" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <Button
            android:text="@string/get_flights_from_the_airport"
            android:layout_width="223dp"
            android:layout_height="53dp"
            android:background="@drawable/button_background"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/btn_search" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintVertical_bias="0.157"
            android:fontFamily="@font/alegreya"/>
    <Button
            android:text="@string/check_flights_nearby"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:textAllCaps="false"
            android:id="@+id/btn_nearby" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_search" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:fontFamily="@font/alegreya"/>
</LinearLayout>