<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:background="@drawable/main_background"
                                                   android:layout_height="match_parent">

    <ListView
            android:id="@+id/flights_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:context="abhiandroid.com.listexample.MainActivity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btn_show_map">
    </ListView>
    <TextView
            android:text="@string/displaying_list"
            android:layout_width="302dp"
            android:layout_height="44dp"
            android:id="@+id/txt_radius" android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center" android:fontFamily="@font/alegreya" android:textSize="18sp"/>
    <TextView
            android:text="@string/no_loc"
            android:layout_width="385dp"
            android:layout_height="50dp"
            android:id="@+id/txt_current_coordinates" android:textAlignment="center"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:fontFamily="@font/alegreya" android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txt_radius"/>
    <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" android:id="@+id/pb_progressbar"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/btn_show_map"/>
    <Button
            android:text="@string/search"
            android:layout_width="223dp"
            android:layout_height="53dp"
            android:background="@drawable/button_background"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/btn_search"
            android:fontFamily="@font/alegreya"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txt_current_coordinates"/>
    <Button
            android:text="@string/show_map"
            android:layout_width="223dp"
            android:layout_height="53dp"
            android:background="@drawable/button_background"
            android:textAllCaps="false"
            android:id="@+id/btn_show_map"
            android:fontFamily="@font/alegreya"
            app:layout_constraintTop_toBottomOf="@+id/btn_search" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>